--- a/trojanzoo_sphinx_theme/static/css/theme.css
+++ b/trojanzoo_sphinx_theme/static/css/theme.css
@@ -10428,10 +10428,10 @@ ul.sphinx-template-breadcrumbs a {
   margin: 0 0.2em;
 }
 .rst-content :not(h1, h2, h3, h4, h5, h6) > a.reference.external code {
-  color: var(--readthedoc);
+  color: var(--google-blue);
 }
 .rst-content :not(h1, h2, h3, h4, h5, h6) > a.reference.internal code {
-  color: var(--lightning);
+  color: var(--readthedoc);
 }
 
 
