--- a/trojanzoo_sphinx_theme/static/css/theme.css
+++ b/trojanzoo_sphinx_theme/static/css/theme.css
@@ -10431,7 +10431,7 @@ ul.sphinx-template-breadcrumbs a {
   color: var(--google-blue);
 }
 .rst-content :not(h1, h2, h3, h4, h5, h6) > a.reference.internal code {
-  color: var(--readthedoc);
+  color: var(--google-green);
 }
 
 
